// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`buildOptions.baseUrl local URL path generates correct <link> attributes 1`] = `
"
<!DOCTYPE html>
<html lang=\\"en\\">
  <head>
    <link rel=\\"icon\\" href=\\"/static/favicon.ico\\" />
    <link rel=\\"stylesheet\\" type=\\"text/css\\" href=\\"/static/index.css\\" />
  </head>
</html>"
`;

exports[`buildOptions.baseUrl local URL path generates correct <script> attributes 1`] = `
"
<!DOCTYPE html>
<html lang=\\"en\\">
  <body><script type=\\"module\\" src=\\"/static/_dist_/index.js\\"></script></body>
</html>"
`;

exports[`buildOptions.baseUrl local URL path generates correct import proxies 1`] = `"import logo from './logo.png.proxy.js';"`;

exports[`buildOptions.baseUrl local URL path generates correct import proxies 2`] = `"export default \\"/static/logo.png\\";"`;

exports[`buildOptions.baseUrl local URL path generates correct import.meta.env imports 1`] = `
"import * as __SNOWPACK_ENV__ from './_snowpack/env.js';

console.log(__SNOWPACK_ENV__)"
`;

exports[`buildOptions.baseUrl local URL path generates correct relative package imports 1`] = `"import {flatten} from './_snowpack/pkg/array-flatten.js';"`;

exports[`buildOptions.baseUrl remote URL generates correct <link> attributes 1`] = `
"
<!DOCTYPE html>
<html lang=\\"en\\">
  <head>
    <link rel=\\"icon\\" href=\\"https://www.example.com/favicon.ico\\" />
    <link rel=\\"stylesheet\\" type=\\"text/css\\" href=\\"https://www.example.com/index.css\\" />
  </head>
</html>"
`;

exports[`buildOptions.baseUrl remote URL generates correct <script> attributes 1`] = `
"
<!DOCTYPE html>
<html lang=\\"en\\">
  <body><script type=\\"module\\" src=\\"https://www.example.com/_dist_/index.js\\"></script></body>
</html>"
`;

exports[`buildOptions.baseUrl remote URL generates correct import proxies 1`] = `"import logo from './logo.png.proxy.js';"`;

exports[`buildOptions.baseUrl remote URL generates correct import proxies 2`] = `"export default \\"https://www.example.com/logo.png\\";"`;

exports[`buildOptions.baseUrl remote URL generates correct import.meta.env imports 1`] = `
"import * as __SNOWPACK_ENV__ from './_snowpack/env.js';

console.log(__SNOWPACK_ENV__)"
`;

exports[`buildOptions.baseUrl remote URL generates correct relative package imports 1`] = `"import {flatten} from './_snowpack/pkg/array-flatten.js';"`;
